@@ -1,3 +1,8 @@
+2019-12-11  Ulrich Müller  <ulm@gentoo.org>
+
+	* glep-mode.el (glep-mode-insert-skeleton): Update template to use
+	the CC-BY-SA-4.0 license, following the change in GLEP 2.
+
 2019-07-28  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.47 released.
